# DTU-Courses-RAG

./: .gitignore  pyproject.toml
src/DTU-rag/: main.py  rag-ui.py
